--- a/CursoJava16h2019/nbproject/project.properties
+++ b/CursoJava16h2019/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/OlaMundo.jar
+dist.jar=${dist.dir}/CursoJava16h2019.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
